--- a/index.html
+++ b/index.html
@@ -114,27 +114,63 @@
         </div>
       </div>
       
-      <!-- TUGAS 2 -->
-      <div class="task-card">
+
+    <!-- TUGAS 2 -->
+    <div class="task-card">
         <h3>📁 Tugas 2 – Algoritma Pembentukan Garis</h3>
-        <iframe src="https://drive.google.com/file/d/ID_FILE_DRIVE_TUGAS2/preview" allow="autoplay"></iframe>
-        <iframe height="300" src="https://www.youtube.com/embed/ID_VIDEO_YOUTUBE_TUGAS2" frameborder="0" allowfullscreen></iframe>
-      </div>
+        <label>Link PDF (Google Drive):</label>
+        <input type="text" id="pdfLink2" placeholder="Tempelkan link share Google Drive di sini" value="https://drive.google.com/file/d/1gP9vAW3qlwe2Qp5mtCKlA1EEd4UM7pK0/view?usp=sharing" />
+        <button onclick="showPDF('pdfLink2', 'pdfView2')">Tampilkan PDF</button>
+        <div class="pdf-link" id="pdfView2">
+        <iframe src="https://drive.google.com/file/d/1gP9vAW3qlwe2Qp5mtCKlA1EEd4UM7pK0/preview" allow="autoplay"></iframe>
+        </div>
+        <br />
+        <label>Link Video YouTube:</label>
+        <input type="text" id="videoLink2" placeholder="Tempelkan link YouTube di sini" value="https://youtu.be/cb8popopBUE?si=2-tV3ns78_4UUovv" />
+        <button onclick="showVideoLink('videoLink2', 'videoView2')">Tampilkan Video</button>
+        <div class="video-link" id="videoView2">
+        <iframe width="100%" height="300" src="https://www.youtube.com/embed/cb8popopBUE" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+  
 
-      <!-- TUGAS 3 -->
-      <div class="task-card">
+    <!-- TUGAS 3 -->
+    <div class="task-card">
         <h3>📁 Tugas 3 – Algoritma Pembentukan Lingkaran</h3>
-        <iframe src="https://drive.google.com/file/d/ID_FILE_DRIVE_TUGAS3/preview" allow="autoplay"></iframe>
-        <iframe height="300" src="https://www.youtube.com/embed/ID_VIDEO_YOUTUBE_TUGAS3" frameborder="0" allowfullscreen></iframe>
-      </div>
+        <label>Link PDF (Google Drive):</label>
+        <input type="text" id="pdfLink3" placeholder="Tempelkan link share Google Drive di sini" value="https://drive.google.com/file/d/1LFA2nB1cW1wEt0JBbV9AF8cogLWX9L9R/view?usp=sharing" />
+        <button onclick="showPDF('pdfLink3', 'pdfView3')">Tampilkan PDF</button>
+        <div class="pdf-link" id="pdfView3">
+        <iframe src="https://drive.google.com/file/d/1LFA2nB1cW1wEt0JBbV9AF8cogLWX9L9R/preview" allow="autoplay"></iframe>
+        </div>
+        <br />
+        <label>Link Video YouTube:</label>
+        <input type="text" id="videoLink3" placeholder="Tempelkan link YouTube di sini" value="https://youtu.be/Hxz9D_gkI4M" />
+        <button onclick="showVideoLink('videoLink3', 'videoView3')">Tampilkan Video</button>
+        <div class="video-link" id="videoView3">
+        <iframe width="100%" height="300" src="https://www.youtube.com/embed/Hxz9D_gkI4M" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+  
 
-      <!-- TUGAS 4 -->
-      <div class="task-card">
+    <!-- TUGAS 4 -->
+    <div class="task-card">
         <h3>📁 Tugas 4 – Algoritma Pembentukan Kurva</h3>
-        <iframe src="https://drive.google.com/file/d/ID_FILE_DRIVE_TUGAS4/preview" allow="autoplay"></iframe>
-        <iframe height="300" src="https://www.youtube.com/embed/ID_VIDEO_YOUTUBE_TUGAS4" frameborder="0" allowfullscreen></iframe>
-      </div>
-
+        <label>Link PDF (Google Drive):</label>
+        <input type="text" id="pdfLink4" placeholder="Tempelkan link share Google Drive di sini" value="https://drive.google.com/file/d/10ZlYpIpBLJ9kDRYBoPuJ1GiFmCChAXRu/view?usp=sharing" />
+        <button onclick="showPDF('pdfLink4', 'pdfView4')">Tampilkan PDF</button>
+        <div class="pdf-link" id="pdfView4">
+        <iframe src="https://drive.google.com/file/d/10ZlYpIpBLJ9kDRYBoPuJ1GiFmCChAXRu/preview" allow="autoplay"></iframe>
+        </div>
+        <br />
+        <label>Link Video YouTube:</label>
+        <input type="text" id="videoLink4" placeholder="Tempelkan link YouTube di sini" value="https://youtu.be/Dj8BRfrxrIQ" />
+        <button onclick="showVideoLink('videoLink4', 'videoView4')">Tampilkan Video</button>
+        <div class="video-link" id="videoView4">
+        <iframe width="100%" height="300" src="https://www.youtube.com/embed/Dj8BRfrxrIQ" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+  
     </section>
   </main>
 
