--- a/index.html
+++ b/index.html
@@ -170,8 +170,87 @@
         <iframe width="100%" height="300" src="https://www.youtube.com/embed/Dj8BRfrxrIQ" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
-  
-    </section>
+
+
+    <!-- TUGAS 5 -->
+    <div class="task-card">
+        <h3>📁 Tugas 5 – Persamaan Misteri</h3>
+        <label>Link PDF (Google Drive):</label>
+        <input type="text" id="pdfLink5" value="https://drive.google.com/file/d/1G-P_ht7aX2y0Klh9-UIbHZ6kWFKpcIoP/view?usp=sharing" />
+        <button onclick="showPDF('pdfLink5', 'pdfView5')">Tampilkan PDF</button>
+        <div class="pdf-link" id="pdfView5"></div>
+        <iframe src="https://drive.google.com/file/d/1G-P_ht7aX2y0Klh9-UIbHZ6kWFKpcIoP/preview" width="100%" height="400" allow="autoplay"></iframe>
+</div>
+
+
+<!-- TUGAS 6 -->
+<div class="task-card">
+  <h3>📁 Tugas 6 – Transformasi 2D dan 3D</h3>
+  <label>Link PDF (Google Drive):</label>
+  <input type="text" id="pdfLink6" value="https://drive.google.com/file/d/1zjtqJMzKkSnfh_gDl1CwBHjwrsiiJMKQ/view?usp=sharing" />
+  <button onclick="showPDF('pdfLink6', 'pdfView6')">Tampilkan PDF</button>
+  <div class="pdf-link" id="pdfView6"></div>
+  <iframe src="https://drive.google.com/file/d/1zjtqJMzKkSnfh_gDl1CwBHjwrsiiJMKQ/preview" width="100%" height="400" allow="autoplay"></iframe>
+  </div>
+  <br />
+  <label>Link Video YouTube:</label>
+  <input type="text" id="videoLink6" value="https://youtu.be/NI4xHWUm_Do?si=Vzs1bkvlEvCIghUT" />
+  <button onclick="showVideoLink('videoLink6', 'videoView6')">Tampilkan Video</button>
+  <div class="video-link" id="videoView6"></div>
+  <iframe width="100%" height="300" src="https://www.youtube.com/embed/NI4xHWUm_Do" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <br />
+  <label>Link Spreadsheet (Google Sheets):</label>
+  <input type="text" id="sheetLink6" value=" https://docs.google.com/spreadsheets/d/1KdadwvekkaGGHcSgDgQf8RXZGJqPW_Akg5IARzp9p_I/edit?usp=sharing" />
+  <button onclick="showSpreadsheet('sheetLink6', 'sheetView6')">Tampilkan Spreadsheet</button>
+  <div class="sheet-link" id="sheetView6"></div>
+  <iframe src="https://docs.google.com/spreadsheets/d/1KdadwvekkaGGHcSgDgQf8RXZGJqPW_Akg5IARzp9p_I/preview" width="100%" height="400"></iframe>
+  </div>
+</div>
+
+<!-- TUGAS 7 -->
+<div class="task-card">
+  <h3>📁 Tugas 7 – Algoritma Cohen-Sutherland</h3>
+  <label>Link PDF (Google Drive):</label>
+  <input type="text" id="pdfLink7" value="https://drive.google.com/file/d/1Uq96dVZBNl2Z3Yj9PDZ-M1Dvmpgt_XcK/view?usp=sharing" />
+  <button onclick="showPDF('pdfLink7', 'pdfView7')">Tampilkan PDF</button>
+  <div class="pdf-link" id="pdfView7"></div>
+  <iframe src="https://drive.google.com/file/d/1Uq96dVZBNl2Z3Yj9PDZ-M1Dvmpgt_XcK/preview" allow="autoplay" width="100%" height="400" frameborder="0"></iframe>
+  </div>
+  <br />
+  <label>Link Video YouTube:</label>
+  <input type="text" id="videoLink7" value="https://youtu.be/G9XnKagItHs?si=Pz6PF8f8sBU4hRFo" />
+  <button onclick="showVideoLink('videoLink7', 'videoView7')">Tampilkan Video</button>
+  <div class="video-link" id="videoView7"></div>
+  <iframe width="100%" height="300" src="https://www.youtube.com/embed/G9XnKagItHs" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <br />
+  <label>Link Spreadsheet (Google Sheets):</label>
+  <input type="text" id="sheetLink7" value="https://docs.google.com/spreadsheets/d/14ED9mzmEmTNdk1As4uvMsAkBqsVqe0q-WaKV63GniZ8/edit?usp=sharing" />
+  <button onclick="showSpreadsheet('sheetLink7', 'sheetView7')">Tampilkan Spreadsheet</button>
+  <div class="sheet-link" id="sheetView7"></div>
+  <iframe src="https://docs.google.com/spreadsheets/d/14ED9mzmEmTNdk1As4uvMsAkBqsVqe0q-WaKV63GniZ8/preview" width="100%" height="400"></iframe>
+  </div>
+</div>
+
+<!-- TUGAS 8 -->
+<div class="task-card">
+  <h3>📁 Tugas 8 – Polygon Clipping Algorithm</h3>
+  <label>Link PDF (Google Drive):</label>
+  <input type="text" id="pdfLink8" value="https://drive.google.com/file/d/14bPZGiIRg2Kjb3bZZIxkSST5fSjJZ-30/view?usp=sharing" />
+  <button onclick="showPDF('pdfLink8', 'pdfView8')">Tampilkan PDF</button>
+  <div class="pdf-link" id="pdfView8"></div>
+  <iframe src="https://drive.google.com/file/d/14bPZGiIRg2Kjb3bZZIxkSST5fSjJZ-30/preview" allow="autoplay" width="100%" height="400" frameborder="0"></iframe>
+  </div>
+  <br />
+  <label>Link Video YouTube:</label>
+  <input type="text" id="videoLink8" value="https://youtu.be/sVDa5jbtKG0?si=1feVQR9m51bKtECU" />
+  <button onclick="showVideoLink('videoLink8', 'videoView8')">Tampilkan Video</button>
+  <div class="video-link" id="videoView8"></div>
+  <iframe width="100%" height="300" src="https://www.youtube.com/embed/sVDa5jbtKG0" frameborder="0" allowfullscreen></iframe>
+</div>
+
+  </section>
   </main>
 
   <footer>
